@@ -463,4 +463,5 @@
 	  random access to large files.
 
 0.3.15 2008-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>
-	* Add support for ROMFS filesystem (initial checkin untested)
+	* Added support for ROMFS filesystem.
+	* Added a simple test the ROMFS filesystem (examples/romfs)
